<resources>
    <string name="app_name">Eaton Nameplate Recognition</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="ok">OK</string>

    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>

    <string name="no_camera_permission">This application cannot run because it does not have the camera permission. The application will now exit.</string>

    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>

    <string name="title_activity_main">Ocr Detector Sample</string>

    <string name="ocr_header">Click "Detect Text" to detect text</string>

    <string name="read_text">Detect Text</string>

    <string name="auto_focus">Auto Focus</string>

    <string name="use_flash">Use Flash</string>

    <string name="ocr_success">Text read successfully</string>

    <string name="ocr_failure">No text captured</string>

    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="action_manual">"Manual Entry"</string>
    <string name="action_clear">Clear</string>
    <string name="action_export">Export</string>
    <string name="action_delete">Delete Checked</string>
    <string-array name="fields">
        <item>Brand</item>
        <item>Catalog #</item>
        <item>Order #</item>
        <item>Range</item>
        <item>Voltage</item>
        <item>Serial #</item>
        <item>Unit #</item>
        <item>Manufacturing Date</item>
        <item>Manufacturing Location</item>
        <item>Physical Location</item>
        <item>Drawing #</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
